--- a/01. (기초) 파이썬 변수와 자료형.ipynb
+++ b/01. (기초) 파이썬 변수와 자료형.ipynb
@@ -39,9 +39,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 229,
+   "id": "1f3aba50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello World!') # 입력창과 출력창"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
    "id": "9e8d7811",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
