--- a/02. (연습) 반복문과 조건문.ipynb
+++ b/02. (연습) 반복문과 조건문.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "61297467",
+   "metadata": {},
+   "source": [
+    "#### 참고 : 초보자를 위한 파이썬 300제 https://wikidocs.net/book/922"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "497e7482",
    "metadata": {},
    "source": [
