--- a/05. (심화) 패키지 활용  rdkit ★학습목표★.ipynb
+++ b/05. (심화) 패키지 활용  rdkit ★학습목표★.ipynb
@@ -42,7 +42,8 @@
    "id": "15dd016e",
    "metadata": {},
    "source": [
-    "### 파이썬으로 약물 분석 라이브러리 \"rdkit\"을 활용할 수 있다.  \n",
+    "### ★1차 학습목표 파이썬으로 약물 분석 패키지 \"rdkit\"을 활용할 수 있다. ★\n",
+    "\n",
     "#### 공식문서 :  https://www.rdkit.org/docs/"
    ]
   },
